test_regress/t/t_enum_recurse_bad2.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty, 2019 by Wilson Snyder.
// SPDX-License-Identifier: CC0-1.0

typedef enum foo_t { A  = 'b0, B = 'b1 } foo_t;
